--- a/.github/workflows/DockerRegistry.yml
+++ b/.github/workflows/DockerRegistry.yml
@@ -6,7 +6,7 @@ on:
       - main
 env:
   REGISTRY_URL: "docker.io"
-  
+  CURRENT_DATETIME: $(date '+%Y%m%d%H%M%S')
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -20,13 +20,6 @@ jobs:
 
     - name: Connexion au registre Docker
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin ${{ env.REGISTRY_URL }}
-
-    - name: Obtenir la date et l'heure actuelles
-      run: |
-        export CURRENT_DATETIME=$(date '+%Y%m%d%H%M%S')
-
-    - name: Afficher la valeur current datetime
-      run: echo "${{ $CURRENT_DATETIME }}"
 
     - name: Construction de l'image Docker
       run: docker build -t argocd2:$CURRENT_DATETIME .
