--- a/.github/workflows/DockerRegistry.yml
+++ b/.github/workflows/DockerRegistry.yml
@@ -6,7 +6,7 @@ on:
       - main
 env:
   REGISTRY_URL: "docker.io"
-  CURRENT_DATETIME: $(date '+%Y%m%d%H%M%S')
+
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
@@ -22,13 +22,13 @@ jobs:
       run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin ${{ env.REGISTRY_URL }}
 
     - name: Construction de l'image Docker
-      run: docker build -t argocd2:$CURRENT_DATETIME .
+      run: docker build -t argocd2:test .
 
     - name: Exécution du conteneur Docker
-      run: docker run -p 8080:80 argocd2:$CURRENT_DATETIME
+      run: docker run -p 8080:80 argocd2:test
 
     - name: Tag de l'image Docker
-      run: docker tag argocd2:$CURRENT_DATETIME ${REGISTRY_URL}/argocd2:$CURRENT_DATETIME
+      run: docker tag argocd2:test ${REGISTRY_URL}/argocd2:test
 
     - name: Push de l'image Docker vers le registre
-      run: docker push ${REGISTRY_URL}/argocd2:$CURRENT_DATETIME
+      run: docker push ${REGISTRY_URL}/argocd2:test
