--- a/.github/workflows/DockerRegistry.yml
+++ b/.github/workflows/DockerRegistry.yml
@@ -1,34 +1,31 @@
-name: Registry Docker
+name: Docker Build and Push
 
 on:
   push:
     branches:
-      - main
-env:
-  REGISTRY_URL: "docker.io"
+      - main  # Modifier selon votre branche principale
 
 jobs:
-  build_and_deploy:
+  build_and_push:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout du code
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: check url
-      run: echo ${{ env.REGISTRY_URL }}
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-    - name: Connexion au registre Docker
-      run: echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin ${{ env.REGISTRY_URL }}
+      - name: Build and push Docker image
+        env:
+          CURRENT_DATETIME: ${{ steps.timestamp.outputs.timestamp }}
+        run: |
+          docker build -t zertyr/argocd2:$CURRENT_DATETIME .
+          docker push zertyr/argocd2:$CURRENT_DATETIME
 
-    - name: Construction de l'image Docker
-      run: docker build -t argocd2:test .
-
-    - name: Exécution du conteneur Docker
-      run: docker run -p 8080:80 argocd2:test
-
-    - name: Tag de l'image Docker
-      run: docker tag argocd2:test ${REGISTRY_URL}/argocd2:test
-
-    - name: Push de l'image Docker vers le registre
-      run: docker push ${REGISTRY_URL}/argocd2:test
+      - name: Get current timestamp
+        id: timestamp
+        run: echo "::set-output name=timestamp::$(date -u +'%Y%m%d%H%M%S')"
