--- a/deployment.yaml
+++ b/deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: nginx-deployment
+  name: deployment
 spec:
   replicas: 4
   selector:
@@ -17,3 +17,5 @@ spec:
         image: zertyr/argocd2
         ports:
         - containerPort: 80
+
+        apiVersion: apps/v1
