--- a/.github/workflows/realDeployment.yml
+++ b/.github/workflows/realDeployment.yml
@@ -18,7 +18,7 @@ jobs:
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login docker.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
       
     - name: Push the Docker image
-      run: docker push ${{ secrets.DOCKER_USERNAME }}/reactcicd:${{ github.sha }}
+      run: docker push ${{ secrets.DOCKER_USERNAME }}/argocd2:${{ github.sha }}
 
     - name: Checkout code for the update
       uses: actions/checkout@v3
