--- a/.github/workflows/realDeployment.yml
+++ b/.github/workflows/realDeployment.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/checkout@v3
     
     - name: Build the Docker image
-      run: docker build -t ${{ secrets.DOCKER_USERNAME }}/argocd2:${{ github.sha }}
+      run: docker build -t zertyr/argocd2:${{ github.sha }}
       
     - name: Log in to Docker Registry
       run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login docker.io -u ${{ secrets.DOCKER_USERNAME }} --password-stdin
